ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: burgan-ingress
#   namespace: kubernetes-dashboard
# spec:
#   ingressClassName: "nginx"
#   rules:
#   - host: dashboard.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix  
#         backend:
#           service:
#             name: kubernetes-dashboard
#             port: 
#               number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-burgan
spec:
  rules:
  - host: burganlocal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: burgan-service
            port:
              number: 3000
  ingressClassName: nginx
